# Meghan-be

./: .env.example  .gitignore  AWS_SETUP.md  DEVELOPMENT.md  Dockerfile.backend  README.md  alexa_like_voice_assistant_plan.md  apprunner.yaml  aws_integration_status.md  docker-compose.yml  init-db.sql  main.py  meghan_ai_aws_explanation.md  mongo-init.js  phase0_bom.md  phase0_design_doc.md  plan.md  pyproject.toml  pytest.ini  requirements.txt  setup-dev.sh  sttAssembly.py  testAWS.py
app/: main.py
app/core/: config.py  (+4 more)
benchmarks/: auth_load.js  chat_load.js  config.js  generate_test_audio.py  health_load.js  helpers.js  history_load.js  insights_load.js  run_all.sh  voice_load.js
docs/: architecture_supabase_analysis.md  aws_beginner_step_by_step_guide.md  desktop_companion_plan.md  prototype_performance_report_benchmarking.md  tier_inference_strategies.md  websocket_explanation.md
frontend/: .env.example  .gitignore  Dockerfile.dev  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js
migrations/: add_chat_messages_s3_key.sql  add_community_messages_table.sql  add_conversation_mode.sql  add_expressions_tables.sql  add_weekly_wellbeing_insights_table.sql
scripts/: test_rds_connection.py  test_websocket_live.py
tests/: README.md  __init__.py  conftest.py  manual_test_script.py  test_bedrock_wrapper.py  test_community_websocket.py  test_crisis.py  test_database_integration.py  test_expressions.py  test_infrastructure.py  test_insights.py  test_journal.py  test_onboarding_and_communities.py  test_phase3_endpoints.py  test_s3_storage.py  test_voice_s3_flow.py  (+1 more)
(+89 files in other folders)
