[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.127.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.122.3",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "aiosqlite>=0.22.1",
    "motor>=3.6.0",
    "pymongo>=4.10.1",
    "redis>=5.2.0",
    "aioredis>=2.0.1",
    "aiosqlite>=0.22.1",
]
